--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <main>
+      <div class="left-side regular">
+        <h1 class="bold">Stay updated!</h1>
+        <p>Join 60,000+ product managers receiving monthly updates on:</p>
+        <ul>
+          <li>
+            <img src="images/icon-list.svg" alt="" />Product discovery and
+            building what matters
+          </li>
+          <li>
+            <img src="images/icon-list.svg" alt="" />Measuring to ensure updates
+            are a success
+          </li>
+          <li><img src="images/icon-list.svg" alt="" />And much more!</li>
+        </ul>
+        <form action="">
+          <div class="labelInput">
+            <p class="labelEmail bold">Email address:</p>
+            <p class="labelError">Valid email required</p>
+          </div>
+          <input type="text" placeholder="email@company.com" />
+          <button class="bold">Subscribe to monthly newsletter</button>
+        </form>
+      </div>
+      <div class="right-side">
+        <img
+          src="images/illustration-sign-up-desktop.svg"
+          class="desktopImg"
+          alt=""
+        />
+        <img
+          src="images/illustration-sign-up-mobile.svg"
+          class="mobileImg"
+          alt=""
+        />
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
