--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <div class="popup" id="popup">
+      <!-- <div class="popup" id="popup">
         <img src="images/icon-success.svg" alt="" class="popupImage" />
         <h1 class="popupHeader">Thanks for subscribing!</h1>
         <p class="popupDetail">
@@ -22,7 +22,7 @@
           click the button inside to confirm your subscription.
         </p>
         <button class="popupBtn">Dismiss message</button>
-      </div>
+      </div> -->
       <div class="left-side regular">
         <h1 class="bold">Stay updated!</h1>
         <p>Join 60,000+ product managers receiving monthly updates on:</p>
