done with the mobile view

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       </div> -->
     <main>
       <div class="left-side regular">
-        <h1 class="bold">Stay updated!</h1>
-        <p>Join 60,000+ product managers receiving monthly updates on:</p>
+        <h1 class="bold h1Updated">Stay updated!</h1>
+        <p class="details">
+          Join 60,000+ product managers receiving monthly updates on:
+        </p>
         <ul>
           <li>
             <img src="images/icon-list.svg" alt="" />Product discovery and
