--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
     />
   </head>
   <body>
-    <!-- <div class="popup" id="popup">
+    <div class="popup" id="popup">
+      <div class="popTop">
         <img src="images/icon-success.svg" alt="" class="popupImage" />
-        <h1 class="popupHeader">Thanks for subscribing!</h1>
-        <p class="popupDetail">
-          A confirmation email has been sent to emailAdd. Please open it and
-          click the button inside to confirm your subscription.
+        <h1 class="popupHeader regular bold">Thanks for subscribing!</h1>
+        <p class="popupDetail regular">
+          A confirmation email has been sent to
+          <span class="bold">emailAdd</span>. Please open it and click the
+          button inside to confirm your subscription.
         </p>
+      </div>
+      <div>
         <button class="popupBtn">Dismiss message</button>
-      </div> -->
-    <main>
+      </div>
+    </div>
+    <main class="display">
       <div class="left-side regular">
         <h1 class="bold h1Updated">Stay updated!</h1>
         <p class="details">
