--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
           </li>
           <li><img src="images/icon-list.svg" alt="" />And much more!</li>
         </ul>
-        <form action="">
+        <form action="#">
           <div class="labelInput">
             <p class="labelEmail bold">Email address:</p>
-            <p class="labelError">Valid email required</p>
+            <p class="labelError toggleError" id="labelError">
+              Valid email required
+            </p>
           </div>
-          <input type="text" placeholder="email@company.com" />
-          <button class="bold">Subscribe to monthly newsletter</button>
+          <input type="text" placeholder="email@company.com" id="inputEmail" />
+          <button class="bold" id="subscribeBtn">
+            Subscribe to monthly newsletter
+          </button>
         </form>
       </div>
       <div class="right-side">
